--- a/haskell-aoc2024.cabal
+++ b/haskell-aoc2024.cabal
@@ -19,7 +19,7 @@ common warnings
 executable haskell-aoc2024
     import:           warnings
     main-is:          Main.hs
-    -- other-modules:
+    other-modules:    TestLib
     -- other-extensions:
     build-depends:    base ^>=4.16.4.0
     hs-source-dirs:   app
