--- a/haskell-aoc2024.cabal
+++ b/haskell-aoc2024.cabal
@@ -19,8 +19,9 @@ common warnings
 executable haskell-aoc2024
     import:           warnings
     main-is:          Main.hs
-    other-modules:    TestLib, Day01
+    other-modules:    TestLib, DataMassParsers, Day01
     -- other-extensions:
     build-depends:    base ^>=4.16.4.0
+                      , split ^>=0.2.5
     hs-source-dirs:   app
     default-language: Haskell2010
