--- a/haskell-aoc2024.cabal
+++ b/haskell-aoc2024.cabal
@@ -20,6 +20,7 @@ executable haskell-aoc2024
     import:           warnings
     main-is:          Main.hs
     other-modules:    TestLib, DataMassParsers, Day01, Day02, Day03, Day04, Day05, Day06, Day07
+                      , Day08
     -- other-extensions:
     build-depends:    base ^>=4.16.4.0
                       , split ^>=0.2.5
