--- a/haskell-aoc2024.cabal
+++ b/haskell-aoc2024.cabal
@@ -19,8 +19,9 @@ common warnings
 executable haskell-aoc2024
     import:           warnings
     main-is:          Main.hs
-    other-modules:    TestLib, DataMassParsers, Day01, Day02, Day03, Day04, Day05, Day06, Day07
-                      , Day08
+    other-modules:    TestLib, DataMassParsers, Debugging
+                      , Day01, Day02, Day03, Day04, Day05, Day06, Day07
+                      , Day08, Day09
     -- other-extensions:
     build-depends:    base ^>=4.16.4.0
                       , split ^>=0.2.5
