--- a/haskell-aoc2024.cabal
+++ b/haskell-aoc2024.cabal
@@ -24,7 +24,8 @@ executable haskell-aoc2024
                       , Day08, Day09, Day10, Day11, Day12, Day13, Day14
                       , Day15
     -- other-extensions:
-    build-depends:    base ^>=4.16.4.0
+    -- HLS Version = 2.10.0.0
+    build-depends:    base ^>=4.20.0.0
                       , split ^>=0.2.5
     hs-source-dirs:   app
     default-language: Haskell2010
