--- a/haskell-aoc2024.cabal
+++ b/haskell-aoc2024.cabal
@@ -19,7 +19,7 @@ common warnings
 executable haskell-aoc2024
     import:           warnings
     main-is:          Main.hs
-    other-modules:    TestLib, DataMassParsers, Debugging
+    other-modules:    TestLib, TestLibrary, DataMassParsers, Debugging
                       , Day01, Day02, Day03, Day04, Day05, Day06, Day07
                       , Day08, Day09, Day10, Day11, Day12, Day13, Day14
                       , Day15, Day16, Day17
